<resources>
    <!-- Global -->
    <string name="app_name">Kompleks</string>

    <!-- Content (Splash Screen) -->
    <string name="splash_content_description">Splash screen dari aplikasi.</string>

    <!-- Content (Lupa Password) -->
    <string name="lupapassword_username">Username: user</string>
    <string name="lupapassword_password">Password: 123456</string>
    <string name="lupapassword_image_content_description">Gambar animasi orang lupa.</string>
    <string name="lupapassword_reminder">Sudah mengingat kembali?</string>
    <string name="lupapassword_login">Coba Login Kembali</string>

    <!-- Content (Activity Main) -->
    <string name="main_hello">Hello!</string>
    <string name="main_welcome">Selamat datang di Kompleks!</string>
    <string name="main_fail_auth">Username atau password Anda salah!</string>
    <string name="main_uname">Username</string>
    <string name="main_password">Password</string>
    <string name="main_login">Login</string>
    <string name="main_forget">Lupa username / password?</string>
    <string name="main_fail">Ada kesalahan dalam autentikasi!</string>

    <!-- Content (Daftar Tamu) -->
    <string name="daftar_tamu_title">Tamu Masuk</string>
    <string name="daftar_tamu_sample">Data</string>
    <string name="daftar_tamu_confirm">List tamu yang masih di dalam kompleks.</string>
    <string name="daftar_tamu_failed">Ada kesalahan internal dalam pengambilan data!</string>
    <string name="daftar_tamu_keluar_title">Tamu Keluar</string>
    <string name="daftar_tamu_keluar_confirm">List seluruh tamu dalam database.</string>

    <!-- Content (Main Menu) -->
    <string name="main_menu_btnOne">Tamu Baru</string>
    <string name="main_menu_btnTwo">Tamu Masuk</string>
    <string name="main_menu_btnThree">Tamu Keluar</string>
    <string name="main_menu_btnFour">Panduan Penggunaan</string>
    <string name="main_menu_desc">Logo Aplikasi</string>

    <!-- Content (Detail Tamu) -->
    <string name="detail_tamu_title">Detail Tamu Masuk</string>
    <string name="detail_tamu_title_keluar">Detail Tamu Keluar</string>
    <string name="detail_tamu_name">Nama Tamu</string>
    <string name="detail_tamu_tujuan">Tujuan Kunjungan</string>
    <string name="detail_tamu_plat">Plat Nomor Kendaraan</string>
    <string name="detail_tamu_jamMasuk">Jam Masuk</string>
    <string name="detail_tamu_jamKeluar">Jam Keluar</string>
    <string name="detail_tamu_foto">Foto</string>
    <string name="detail_tamu_status">Status</string>
    <string name="detail_tamu_status_done">Tamu sudah selesai!</string>
    <string name="detail_tamu_status_nope">Tamu belum selesai!</string>
    <string name="detail_tamu_fotoDesc">Gambar Foto KTP</string>
    <string name="detail_tamu_submit">Kunjungan Selesai!</string>
    <string name="detail_tamu_success">Data berhasil diupdate!</string>
    <string name="detail_tamu_failed">Ada kesalahan internal! Silakan coba lagi!</string>
    <string name="detail_tamu_noimage_or_fail">Tidak ada foto atau ada kesalahan internal! Silakan coba lagi!</string>

    <string name="placeholder_plat">B 1020 SSS</string>
    <string name="placeholder_ikon_kamera">Gambar ikon kamera</string>
    <string name="placeholder_gambar">placeholder untuk gambar</string>

    <string name="button_uploadGambar">Upload Foto</string>
    <string name="button_submit">Submit</string>

    <!-- Content (FormBaru) -->
    <string name="form_baru_title">Tambah Tamu</string>
    <string name="success_upload">Data berhasil ditambahkan!</string>
    <string name="required_fields">Mohon isi seluruh data!</string>
    <string name="internal_error">Ada kesalahan internal pada server saat upload gambar! Silakan coba lagi!</string>
    <string name="internal_error_rdb">Ada kesalahan internal pada server saat memasukkan data! Silakan coba lagi!</string>

    <!-- Content (PanduanPengguna) -->
    <string name="judul_panduan">Panduan Pengguna</string>
    <string name="desc_panduan">Gambar panduan pengguna</string>

    <!-- Authority -->
    <string name="authority">avanger.co.id.fileprovider</string>

    <!-- Firebase -->
    <string name="firebase_document">tamu</string>
    <string name="firebase_storage">foto_tamu</string>
    <string name="firebase_email">kompleks.avanger.com</string>
</resources>