<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:src="@drawable/animation_500_kn6eapgm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:letterSpacing="0.03"
            android:text="@string/lupapassword_username"
            android:textColor="@color/background"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.03"
            android:text="@string/lupapassword_password"
            android:textColor="@color/background"
            android:textSize="30sp"
            android:textStyle="bold" />

        <View
            android:layout_width="250dp"
            android:layout_height="1.5dp"
            android:layout_marginTop="25dp"
            android:background="@color/background" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:letterSpacing="0.03"
            android:text="@string/lupapassword_reminder"
            android:textAlignment="center"
            android:textColor="@color/background"
            android:textSize="18sp" />

        <Button
            android:id="@+id/KembaliMain"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/button"
            android:text="@string/lupapassword_login"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>