<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/formBaru"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/btnKembali"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@drawable/arrow_left"
            app:layout_constraintEnd_toStartOf="@id/textTambahTamu"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textTambahTamu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.03"
            android:text="@string/form_baru_title"
            android:textAllCaps="true"
            android:textColor="#ffff"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnKembali" />

        <View
            android:id="@+id/formBaruDivider"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@android:color/darker_gray"
            android:backgroundTint="#ffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTambahTamu" />

        <TextView
            android:id="@+id/textNamaTamu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:letterSpacing="0.03"
            android:text="@string/detail_tamu_name"
            android:textColor="#ffff"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/namaTamu"
            app:layout_constraintTop_toBottomOf="@id/formBaruDivider" />

        <EditText
            android:id="@+id/namaTamu"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:autofillHints="Nama Tamu"
            android:background="@drawable/forget2"
            android:hint="@string/detail_tamu_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#0d6e6a"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textNamaTamu" />

        <TextView
            android:id="@+id/textTujuanTamu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:letterSpacing="0.03"
            android:text="@string/detail_tamu_tujuan"
            android:textColor="#ffff"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/tujuanTamu"
            app:layout_constraintTop_toBottomOf="@id/namaTamu" />

        <EditText
            android:id="@+id/tujuanTamu"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:autofillHints="Tujuan Tamu"
            android:background="@drawable/forget2"
            android:hint="@string/detail_tamu_tujuan"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#0d6e6a"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textTujuanTamu" />

        <TextView
            android:id="@+id/textPlatTamu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:letterSpacing="0.03"
            android:text="@string/detail_tamu_plat"
            android:textColor="#ffff"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/platTamu"
            app:layout_constraintTop_toBottomOf="@id/tujuanTamu" />

        <EditText
            android:id="@+id/platTamu"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:autofillHints="@string/placeholder_plat"
            android:background="@drawable/forget2"
            android:hint="@string/placeholder_plat"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#0d6e6a"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textPlatTamu" />

        <LinearLayout
            android:id="@+id/uploadFoto"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/platTamu">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/camera"
                android:contentDescription="@string/placeholder_ikon_kamera" />

            <Button
                android:id="@+id/btnFoto"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:layout_gravity="end"
                android:layout_marginTop="-55dp"
                android:background="@drawable/button_putih"
                android:text="@string/button_uploadGambar"
                android:textColor="#0d6e6a"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/placeholderGambar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/placeholder_gambar"
                android:scaleType="center" />
        </LinearLayout>

        <View
            android:id="@+id/dividerUploadFoto"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"
            android:backgroundTint="#ffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uploadFoto" />

        <ProgressBar
            android:id="@+id/formProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:indeterminate="true"
            android:indeterminateTint="#fff"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerUploadFoto" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button3"
            android:text="@string/button_submit"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formProgress" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>