<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailDaftarTamu"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/btnKembali"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="20dp"
            android:background="@drawable/arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textDetailTamu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:letterSpacing="0.03"
            android:text="@string/detail_tamu_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#ffff"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnKembali" />

        <View
            android:id="@+id/detailTamuDivider"
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/darker_gray"
            android:backgroundTint="#ffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDetailTamu" />

        <TextView
            android:id="@+id/textDetailTamuMasuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.03"
            android:text="@string/detail_tamu_name"
            android:textColor="#ffff"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/detailTamuName"
            app:layout_constraintTop_toBottomOf="@id/detailTamuDivider" />

        <TextView
            android:id="@+id/detailTamuName"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/forget2"
            android:hint="@string/detail_tamu_name"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#0d6e6a"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDetailTamuMasuk" />

        <TextView
            android:id="@+id/textDetailTamuTujuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:letterSpacing="0.03"
            android:text="@string/detail_tamu_tujuan"
            android:textColor="#ffff"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/detailTamuTujuan"
            app:layout_constraintTop_toBottomOf="@id/detailTamuName" />

        <TextView
            android:id="@+id/detailTamuTujuan"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/forget2"
            android:hint="@string/detail_tamu_tujuan"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#0d6e6a"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDetailTamuTujuan" />

        <TextView
            android:id="@+id/textDetailTamuPlat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:letterSpacing="0.03"
            android:text="@string/detail_tamu_plat"
            android:textColor="#ffff"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/detailTamuPlat"
            app:layout_constraintTop_toBottomOf="@id/detailTamuTujuan" />

        <TextView
            android:id="@+id/detailTamuPlat"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/forget2"
            android:hint="@string/detail_tamu_plat"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#0d6e6a"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDetailTamuPlat" />

        <TextView
            android:id="@+id/textDetailTamuJamMasuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:letterSpacing="0.03"
            android:text="@string/detail_tamu_jamMasuk"
            android:textColor="#ffff"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/detailTamuJamMasuk"
            app:layout_constraintTop_toBottomOf="@id/detailTamuPlat" />

        <TextView
            android:id="@+id/detailTamuJamMasuk"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/forget2"
            android:hint="@string/detail_tamu_jamMasuk"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="#0d6e6a"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textDetailTamuJamMasuk" />

        <TextView
            android:id="@+id/textFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:letterSpacing="0.03"
            android:text="@string/detail_tamu_foto"
            android:textColor="#ffff"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@id/detailTamuJamMasuk"
            app:layout_constraintTop_toBottomOf="@id/detailTamuJamMasuk" />

        <LinearLayout
            android:id="@+id/gambarDetailTamu"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textFoto">

            <TextView
                android:id="@+id/fotoTamuErrorText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/detail_tamu_noimage_or_fail"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/fotoTamu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/detail_tamu_fotoDesc"
                android:scaleType="center"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:id="@+id/dividerFoto"
            android:layout_width="280dp"
            android:layout_height="2dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="0dp"
            android:background="@android:color/darker_gray"
            android:backgroundTint="#ffff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gambarDetailTamu" />

        <ProgressBar
            android:id="@+id/formProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:indeterminate="true"
            android:indeterminateTint="#fff"
            android:indeterminateTintMode="src_atop"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dividerFoto" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="35dp"
            android:background="@drawable/button3"
            android:text="@string/detail_tamu_submit"
            android:textColor="#FFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formProgress" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>