<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainTopPart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/KembaliMenu"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="20dp"
            android:background="@drawable/arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/judulMainMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/main_menu_desc"
            android:src="@drawable/logoputih3"
            app:layout_constraintTop_toBottomOf="@id/KembaliMenu" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainMenuPart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/cvbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTopPart">

        <Button
            android:id="@+id/formbaru"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="75dp"
            android:background="@drawable/button2"
            android:text="@string/main_menu_btnOne"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.75" />

        <Button
            android:id="@+id/daftartamu"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/button2"
            android:text="@string/main_menu_btnTwo"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/formbaru"
            app:layout_constraintWidth_percent="0.75" />

        <Button
            android:id="@+id/daftarTamuSelesai"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@drawable/button2"
            android:text="@string/main_menu_btnThree"
            android:textAllCaps="true"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/daftartamu"
            app:layout_constraintWidth_percent="0.75" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>